--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url https://yeknh.github.io/personal-website",
-    "predeploy": "npm run build",
-    "deploy": "rm -rf dist/ && gh-pages -d dist"
+    "build": "parcel build src/index.html",
+    "start": "npm run build && live-server dist",
+    "predeploy": "rm -rf dist/ && npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
