--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url .",
     "start": "npm run build && live-server dist",
     "predeploy": "rm -rf dist/ && npm run build",
     "deploy": "gh-pages -d dist"
